text analysis setup complete

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=backend
-# ml.api.url=http://localhost:5000/api/predict
+ml.api.url=http://localhost:5000/api/predict
 
 
 # run and test
